--- a/apipalabra/.env.example
+++ b/apipalabra/.env.example
@@ -8,12 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=mongodb
+DB_HOST=cluster0.pbd30be.mongodb.net/
+DB_PORT=27017
+DB_DATABASE=palabradb
+DB_USERNAME=lfernandasanchez
+DB_PASSWORD=pdEZD39Kvh4C3HN6
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
